@@ -157,6 +157,7 @@ val mk_lazy: (unit -> 'a) -> 'a Lazy.t
 type description =
   { number : int;
     names : string list;
-    description : string; }
+    description : string;
+    since : Sys.ocaml_release_info option; }
 
 val descriptions : description list
